# Ruki-Pass

backend/: .gitignore  README.md  pyproject.toml
backend/app/: cracker.py  hashing.py  main.py  mutations.py
backend/app/wordlists/: common.txt
backend/scripts/: fetch_wordlists.sh
backend/tests/: test_cracker.py
frontend/src/: CrackerTab.tsx  api.ts  index.css
