[project]
name = "ruki-pass-backend"
version = "0.1.0"
description = "Ruki-Pass backend — hash-cracking research API (MD5 and more)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
